--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "@notionhq/client": "^0.4.13",
     "axios": "^0.25.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
