--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "test.js",
+    "scripts": {
+      "start": "node ./index.js"
+    },
     "dependencies": {
         "@notionhq/client": "^0.1.9",
         "dotenv": "^16.0.0"
