--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "description": "",
     "main": "test.js",
     "scripts": {
-      "start": "node ./index.js"
+        "start": "node ./index.js"
     },
     "dependencies": {
         "@notionhq/client": "^0.1.9",
+        "discord.js": "^13.6.0",
         "dotenv": "^16.0.0"
     }
 }
