--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "node ./index.js"
     },
     "dependencies": {
+        "@discordjs/voice": "^0.9.0",
         "@notionhq/client": "^0.1.9",
         "discord.js": "^13.6.0",
         "dotenv": "^16.0.0"
