--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
         "start": "node ./index.js"
     },
     "dependencies": {
-        "@notionhq/client": "^0.1.9",
+        "@notionhq/client": "^2.2.0",
         "discord.js": "^13.6.0",
-        "dotenv": "^16.0.0"
+        "dotenv": "^16.0.0",
+        "typescript": "^4.8.3"
     }
 }
