--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ARRIVE_CLIENT_TOKEN=
+ORDER_CLIENT_TOKEN=
 LEAVE_CLIENT_TOKEN=
 NOTION_KEY=
 NOTION_DATABASE_ID=
@@ -6,3 +7,4 @@ ROSTER_ID=
 SERVER_ID=
 LOG_ID=
 NOTION_DATABASE_ID=
+ORDER_FORM_DATABASE_ID=
