--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "version": "1.0.0",
     "description": "",
-    "main": "test.js",
+    "main": "index.js",
     "scripts": {
         "start": "node ./index.js"
     },
