--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "build": "tsc",
         "start": "node ./index.js"
     },
     "dependencies": {
         "@notionhq/client": "^0.1.9",
         "discord.js": "^13.6.0",
         "dotenv": "^16.0.0"
+    },
+    "devDependencies": {
+        "typescript": "^4.9.4"
     }
 }
